--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
-#body{
+#container{
     display: flex;
+    height: 100vh;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
 
 #clicker_container{
     display: flex;
     flex-direction: column;
     border: 2px solid;
-    height: 200vh;
-    width: 50%;
+    height: 50vh;
+    width: 49%;
 }
 
 #click_per_second{
@@ -16,7 +20,7 @@
 }
 
 #skibidi_button{
-    height: 400px;
+    height: 200px;
     margin-top: 40px;
     align-self: center;
     overflow: hidden;
@@ -30,15 +34,15 @@
 
 #UI{
     border: 2px solid;
-    width: 60%;
-    height: 200vh;
+    width: 49%;
+    height: 50vh;
     text-align: center;
     align-items: center;
     justify-content: space-around;
 }
 
 #counter{
-    font-size: 8em;
+    font-size: 5em;
     justify-content: center;
 }
 
@@ -54,9 +58,15 @@
     font-size: 2em;
 }
 
-@media (min-width: 400px) {
+@media (max-width: 400px) {
     #clicker_container{
         overflow: hidden;
+        width: 100%;
+    }
+
+    #UI{
+        overflow: hidden;
+        width: 100%;
     }
 
     #click_per_second{
@@ -64,7 +74,7 @@
     }
 
     #counter{
-        font-size: 3em;
+        font-size: 1em;
     }
 
     #skibidi_button{
