--- a/style.css
+++ b/style.css
@@ -80,4 +80,12 @@
         width: 200px;
         height: 200px;
     }
+
+    .labels{
+        font-size: 1.25em;
+    }
+
+    .settings{
+        font-size: 1.25em;
+    }
 }
