--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-direction: column;
     border: 2px solid;
-    height: 50vh;
+    height: 100vh;
     width: 49%;
 }
 
@@ -34,7 +34,7 @@
 #UI{
     border: 2px solid;
     width: 49%;
-    height: 50vh;
+    height: 100vh;
     text-align: center;
     align-items: center;
     justify-content: space-around;
@@ -95,6 +95,7 @@
     #clicker_container{
         overflow: hidden;
         width: 100%;
+        height: 75%;
     }
 
     #UI{
