--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 #clicker_container{
     display: flex;
     flex-direction: column;
+    text-align: center;
     border: 2px solid;
     height: 100vh;
     width: 49%;
@@ -19,7 +20,8 @@
 }
 
 #skibidi_button{
-    height: 200px;
+    height: 400px;
+    width: 400px;
     margin-top: 40px;
     align-self: center;
     overflow: hidden;
@@ -54,7 +56,7 @@
 }
 
 .settings{
-    font-size: 2em;
+    font-size: 0.5em;
 }
 
 @media (max-width: 500px) {
@@ -87,7 +89,14 @@
     }
 
     .settings{
-        font-size: 1.25em;
+        font-size: 0.25em;
+    }
+
+    #settingMenu{
+        height: 500px;
+        width: 300px;
+        font-size: 2em;
+        border: 3px, solid;
     }
 }
 
@@ -121,7 +130,18 @@
     }
 
     .settings{
-        font-size: 1.5em;
+        font-size: 1em;
+    }
+
+    #settingMenu{
+        height: 300px;
+        width: 200px;
+        font-size: 2em;
+        border: 3px, solid;
+    }
+
+    #close{
+        font-size: 0.5em;
     }
 }
 
@@ -129,3 +149,35 @@
     font-size: 2em;
     margin-right: 0px;
 }
+
+.menu{
+    font-size: 5em;
+    height: 1000px;
+    width: 600px;
+    border: 10px, solid;
+    text-align: center;
+    position: absolute;
+    margin: auto;
+    background-color: white;
+    visibility: hidden
+    
+}
+
+#options{
+    font-size: 1.25em;
+}
+
+.open{
+    visibility: visible;
+}
+
+#close{
+    font-size: 0.75em;
+    background-color: red;
+    color: white;
+}
+
+#close:hover{
+    font-size: 1em;
+}
+
